<resources>
    <string name="app_name">Book Store App</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="book_name">Book Name</string>
    <string name="add_book">Add a book</string>
    <string name="price">Price</string>
    <string name="price_hint">0.00</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_info">Supplier Info</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="empty_view_title_text">All the shelves are empty</string>
    <string name="empty_view_subtitle_text">Start adding books</string>
    <string name="buy_text">Buy</string>
    <string name="currency">€</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="edit_book">Edit book entry</string>
    <string name="save_error">Failed to save book</string>
    <string name="save_success">Book saved</string>
    <string name="update_error">Book could not be updated</string>
    <string name="update_success">Information updated</string>
    <string name="unsaved">Discard any changes and quit</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Do you want to delete this entry?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_error">Delete failed</string>
    <string name="delete_success">Successfully deleted entry</string>
    <string name="incomplete_entry">All fields needs to be entered</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="negative">Price can\'t be negative</string>
</resources>
