<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.example.android.bookstoreapps1.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/book_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/quantity"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/phone_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/book_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrease_quantity"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:onClick="decrement"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/edit_book_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="0"
                    android:inputType="number" />

                <Button
                    android:id="@+id/increase_quantity"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:onClick="increment"
                    android:text="@string/plus" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_book_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_book_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/phone_number"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
